--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in the file</p>
+<p>A new line in the file</p>
 </body>
 </html>
