--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in the file</p>
 <p>A new line in the file</p>
+<p>testing for making a branch in Git</p>
+<img src="blog-post-image.png" alt="">
 </body>
 </html>
