Update index.html for github push

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <p>A new line in the file</p>
 <p>testing for making a branch in Git</p>
 <img src="blog-post-image.png" alt="">
+<p>This is the line which i'll push to the github</p>
 </body>
 </html>
